--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/heysafronov/thumbor-url-builder/issues"
   },
-  "homepage": "https://github.com/heysafronov/thumbor-url-builder#readme"
+  "homepage": "https://github.com/heysafronov/thumbor-url-builder#readme",
+  "dependencies": {
+    "prettier": "^1.15.3"
+  }
 }
