--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/heysafronov/thumbor-url-builder.git"
+    "url": "git://github.com/heysafronov/thumbor-url-builder.git"
   },
   "keywords": [
     "thumbor",
